feat: inserimento numeri e creazione di array

--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
         <div class="numeriDaRicordare">
             <h3>Ricorda questi numeri</h3>
             <ul>
-                
+
             </ul>
         </div>
-        <div>
+        <!-- <div id = "numeriDaInserire" style = "display: none;"> -->
+        <div id = "numeriDaInserire">
             <h2>Inserisci i numeri che ricordi</h2>
             <div>
-                <form action="" id="numeriInseriti">
+                <form action="" id="numeriInseriti" >
                     <div>
                         <label for="num1"></label>
                         <input type="number" id="num1" placeholder="..." />
