feat: completato esercizio (no Layout)

--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
     <main>
         <div class="numeriDaRicordare">
             <h3>Ricorda questi numeri</h3>
+            <div>
             <ul>
 
             </ul>
@@ -48,6 +50,10 @@
 
                 </form>
             </div>
+        </div>
+
+        <div id="numeriIndovinati">
+
         </div>
 
 
