--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
             </ul>
         </div>
-        <!-- <div id = "numeriDaInserire" style = "display: none;"> -->
-        <div id = "numeriDaInserire">
+        <div id = "numeriDaInserire" style = "display: none;">
+        <!-- <div id = "numeriDaInserire"> -->
             <h2>Inserisci i numeri che ricordi</h2>
             <div>
                 <form action="" id="numeriInseriti" >
