--- a/index.html
+++ b/index.html
@@ -6,54 +6,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+
 </head>
 
 <body>
     <main>
-        <div class="numeriDaRicordare">
-            <h3>Ricorda questi numeri</h3>
+        <div class="numeriDaRicordare container text-center my-4">
+            <h2>Ricorda questi numeri</h2>
             <div>
-            <ul>
+                <ul class="row g-5 my-1">
 
-            </ul>
-        </div>
-        <div id = "numeriDaInserire" style = "display: none;">
-        <!-- <div id = "numeriDaInserire"> -->
-            <h2>Inserisci i numeri che ricordi</h2>
-            <div>
-                <form action="" id="numeriInseriti" >
-                    <div>
-                        <label for="num1"></label>
-                        <input type="number" id="num1" placeholder="..." />
-                    </div>
-                    <div>
-                        <label for="num2"></label>
-                        <input type="number" id="num2" placeholder="..." />
-                    </div>
-                    <div>
-                        <label for="num3"></label>
-                        <input type="number" id="num3" placeholder="..." />
-                    </div>
-                    <div>
-                        <label for="num4"></label>
-                        <input type="number" id="num4" placeholder="..." />
-                    </div>
-                    <div>
-                        <label for="num5"></label>
-                        <input type="number" id="num5" placeholder="..." />
-                    </div>
-                    <div>
-                        <button type="submit">
-                            Conferma
-                        </button>
-                    </div>
-
-                </form>
+                </ul>
             </div>
+
         </div>
+        <div class="container text-center my-4" id="numeriDaInserire" style="display: none;">
+            <h2>Inserisci i numeri che ricordi</h2>
+            <form id="numeriInseriti">
+                <div class="row g-5 my-1">
+                    <div class="col">
+                        <input type="number" id="num1" class="form-control" placeholder="..." />
+                    </div>
+                    <div class="col">
+                        <input type="number" id="num2" class="form-control" placeholder="..." />
+                    </div>
+                    <div class="col">
+                        <input type="number" id="num3" class="form-control" placeholder="..." />
+                    </div>
+                    <div class="col">
+                        <input type="number" id="num4" class="form-control" placeholder="..." />
+                    </div>
+                    <div class="col">
+                        <input type="number" id="num5" class="form-control" placeholder="..." />
+                    </div>
+                </div>
+                <div class="my-4">
+                    <button type="submit" id="confermBtn" class="btn btn-primary">Conferma</button>
+                </div>
+            </form>
+        </div>
+
 
         <div id="numeriIndovinati">
-
+            <div class="my-4 row justify-content-center">
+                <h2 id="risultato" class="col-12 text-center"></h2>
+                <button type="submit" id="reloadBtn" class="btn btn-primary col-2 my-2" style="display: none;">Try again
+                    ...</button>
+            </div>
         </div>
 
 
